--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "BADBOI-v2",
+    "name": "Codex Bug",
     "version": "6.0.0",
     "description": "WhatsApp War Bot Using Nodejs",
     "main": "index.js",
